@@ -17,15 +17,14 @@
  */
 package org.apache.pig.test;
 
+import static org.junit.Assert.*;
+
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.io.FileReader;
-import java.io.IOException;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.Properties;
-import java.util.regex.Pattern;
 
 import junit.framework.Assert;
 
@@ -33,6 +32,9 @@ import org.apache.pig.ExecType;
 import org.apache.pig.FuncSpec;
 import org.apache.pig.PigServer;
 import org.apache.pig.backend.datastorage.DataStorage;
+import org.apache.pig.backend.hadoop.executionengine.physicalLayer.POStatus;
+import org.apache.pig.backend.hadoop.executionengine.physicalLayer.Result;
+import org.apache.pig.backend.hadoop.executionengine.physicalLayer.relationalOperators.POLoad;
 import org.apache.pig.backend.hadoop.executionengine.physicalLayer.POStatus;
 import org.apache.pig.backend.hadoop.executionengine.physicalLayer.Result;
 import org.apache.pig.backend.hadoop.executionengine.physicalLayer.relationalOperators.POLoad;
@@ -56,7 +58,7 @@ import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
 
-public class TestLoad extends junit.framework.TestCase {
+public class TestLoad {
 
     PigContext pc;
     PigServer[] servers;
@@ -101,6 +103,14 @@ public class TestLoad extends junit.framework.TestCase {
             }
             inpDB.add(t);
         }
+    }
+    
+    @After
+    public void tearDown() throws Exception {
+    }
+
+    @Test
+    public void testGetNextTuple() throws ExecException {
         Tuple t=null;
         int size = 0;
         for(Result res = ld.getNext(t);res.returnStatus!=POStatus.STATUS_EOP;res=ld.getNext(t)){
@@ -210,40 +220,44 @@ public class TestLoad extends junit.framework.TestCase {
     }    
 
     private void checkLoadPath(String orig, String expected) throws Exception {
-        pc.getProperties().setProperty("opt.multiquery", "" + true);
-                
-        DataStorage dfs = pc.getDfs();
-        dfs.setActiveContainer(dfs.asContainer("/tmp"));
-        Map<LogicalOperator, LogicalPlan> aliases = new HashMap<LogicalOperator, LogicalPlan>();
-        Map<OperatorKey, LogicalOperator> logicalOpTable = new HashMap<OperatorKey, LogicalOperator>();
-        Map<String, LogicalOperator> aliasOp = new HashMap<String, LogicalOperator>();
-        Map<String, String> fileNameMap = new HashMap<String, String>();
-        
-        LogicalPlanBuilder builder = new LogicalPlanBuilder(pc);
-        
-        String query = "a = load '"+orig+"';";
-        LogicalPlan lp = builder.parse("Test-Load",
-                                       query,
-                                       aliases,
-                                       logicalOpTable,
-                                       aliasOp,
-                                       fileNameMap);
-        Assert.assertTrue(lp.size()>0);
-        LogicalOperator op = lp.getRoots().get(0);
-        
-        Assert.assertTrue(op instanceof LOLoad);
-        LOLoad load = (LOLoad)op;
+        checkLoadPath(orig, expected, false);
+    }
 
-        String p = load.getInputFile().getFileName();
-        System.err.println("DEBUG: p:" + p + " expected:" + expected +", exectype:" + pc.getExecType());        
-        if (pc.getExecType() == ExecType.MAPREDUCE) {
-            Assert.assertTrue(p.matches("hdfs://[0-9a-zA-Z:\\.]*.*"));
-            Assert.assertEquals(p.replaceAll("hdfs://[0-9a-zA-Z:\\.]*/", "/"),
-                    expected);
-        } else {
-            Assert.assertTrue(p.matches("file://[0-9a-zA-Z:\\.]*.*"));
-            Assert.assertEquals(p.replaceAll("file://[0-9a-zA-Z:\\.]*/", "/"),
-                    expected);
+    private void checkLoadPath(String orig, String expected, boolean isTmp) throws Exception {
+        boolean[] multiquery = {true, false};
+        for (boolean b : multiquery) {
+            pc.getProperties().setProperty("opt.multiquery", "" + b);
+                    
+            DataStorage dfs = pc.getDfs();
+            dfs.setActiveContainer(dfs.asContainer("/tmp"));
+            Map<LogicalOperator, LogicalPlan> aliases = new HashMap<LogicalOperator, LogicalPlan>();
+            Map<OperatorKey, LogicalOperator> logicalOpTable = new HashMap<OperatorKey, LogicalOperator>();
+            Map<String, LogicalOperator> aliasOp = new HashMap<String, LogicalOperator>();
+            Map<String, String> fileNameMap = new HashMap<String, String>();
+            
+            LogicalPlanBuilder builder = new LogicalPlanBuilder(pc);
+            
+            String query = "a = load '"+orig+"';";
+            LogicalPlan lp = builder.parse("Test-Load",
+                                           query,
+                                           aliases,
+                                           logicalOpTable,
+                                           aliasOp,
+                                           fileNameMap);
+            Assert.assertTrue(lp.size()>0);
+            LogicalOperator op = lp.getRoots().get(0);
+            
+            Assert.assertTrue(op instanceof LOLoad);
+            LOLoad load = (LOLoad)op;
+    
+            String p = load.getInputFile().getFileName();
+            p = p.replaceAll("hdfs://[0-9a-zA-Z:\\.]*/","/");
+    
+            if (isTmp) {
+                Assert.assertTrue(p.matches("/tmp.*"));
+            } else {
+                Assert.assertEquals(p, expected);
+            }
         }
     }
 }
