@@ -92,6 +92,15 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-1159: merge join right side table does not support comma seperated paths
+(rding via olgan)
+
+PIG-1158: pig command line -M option doesn't support table union correctly
+(comma seperated paths) (rding via olgan)
+
+PIG-1143: Poisson Sample Loader should compute the number of samples required
+only once (sriranjan via olgan)
+
 PIG-1157: Sucessive replicated joins do not generate Map Reduce plan and fails
 due to OOM (rding via olgan)
 
